--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,19 @@
 /* You can add global styles to this file, and also import other style files */
+// @import '../node_modules/font-awesome/css/font-awesome.min.css';
+
+/* Importing Bootstrap SCSS file. */
+// @import '~bootstrap/scss/bootstrap';
+@import '../node_modules/bootstrap/dist/css/bootstrap.min.css';
+@import '../node_modules/font-awesome/css/font-awesome.min.css';
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&display=swap');
+// @import '../node_modules/bootstrap/dist/css/bootstrap.min.css';
+// @import '../node_modules/font-awesome/css/font-awesome.min.css';
+
+body {
+    // font-family: Sarabun;
+    font-family: 'Poppins', sans-serif !important;
+  }
+  
+  body .ui-widget {
+    font-family: 'Poppins', sans-serif !important;
+  }
